build-delimiter-test.log
   Compiling think-ai-utils v0.1.0 (/home/champi/Dev/think_ai/think-ai-utils)
   Compiling think-ai-qwen v0.1.0 (/home/champi/Dev/think_ai/think-ai-qwen)
   Compiling tower-http v0.5.2
   Compiling think-ai-image-gen v0.1.0 (/home/champi/Dev/think_ai/think-ai-image-gen)
   Compiling tower-http v0.6.6
   Compiling askama_derive v0.12.5
error: expected one of `where` or `{`, found `F`
  --> think-ai-utils/src/lib.rs:22:5
   |
21 | pub async fn measure_async<F, Fut, T>(f: F) -> (T, std::time::Duration)
   |                                                                        - expected one of `where` or `{`
22 |     F: FnOnce() -> Fut,
   |     ^ unexpected token

error: could not compile `think-ai-utils` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: mismatched closing delimiter: `}`
   --> think-ai-image-gen/src/lib.rs:175:11
    |
86  | impl ImageGenerator {
    |                     - closing delimiter possibly meant for this
...
175 |         Ok(GeneratedImage {
    |           ^ unclosed delimiter
...
260 | }
    | ^ mismatched closing delimiter

error: expected identifier, found keyword `impl`
  --> think-ai-qwen/src/client.rs:20:1
   |
16 | pub struct QwenConfig {
   |            ---------- while parsing this struct
...
20 | impl Default for QwenConfig {
   | ^^^^ expected identifier, found keyword

error: could not compile `think-ai-image-gen` (lib) due to 1 previous error
error: expected identifier, found keyword `impl`
  --> think-ai-qwen/src/client.rs:20:1
   |
20 | impl Default for QwenConfig {
   | ^^^^

error[E0432]: unresolved imports `client::QwenClient`, `client::QwenRequest`, `client::QwenResponse`
 --> think-ai-qwen/src/lib.rs:6:18
  |
6 | pub use client::{QwenClient, QwenConfig, QwenRequest, QwenResponse};
  |                  ^^^^^^^^^^              ^^^^^^^^^^^  ^^^^^^^^^^^^ no `QwenResponse` in `client`
  |                  |                       |
  |                  |                       no `QwenRequest` in `client`
  |                  no `QwenClient` in `client`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `think-ai-qwen` (lib) due to 3 previous errors
